feat: Add LDAP authentication support with dual authentication modes
- Add comprehensive LDAP authentication with Active Directory support
- Implement automatic authentication method detection (LDAP vs legacy)
- Add LDAP configuration via environment variables and YAML config
- Support both Docker and non-Docker deployment scenarios
- Add authorization vs authentication error distinction
- Simplify login UI with intelligent username field visibility
- Add LDAP group and user filtering capabilities
- Include comprehensive documentation and installation scripts
- Remove hardcoded Docker ENTRYPOINT for template system compatibility

LDAP Features:
- Server connection with optional TLS support
- Service account binding with secure password handling
- Flexible user filtering with customizable LDAP queries
- Group-based and user-based access control
- Fallback to legacy password authentication

Breaking Changes: None - fully backward compatible

--- a/ui/src/lang/locales/en.json
+++ b/ui/src/lang/locales/en.json
@@ -18,11 +18,16 @@
   },
   "login": {
     "authorizationRequired": "Authorization Required",
+    "username": "Username",
     "password": "Password",
     "signIn": "Sign In",
     "enterPwdTip": "Please enter your password",
     "incorrectPwd": "Incorrect Password",
-    "signOut": "Sign Out"
+    "notAuthorized": "Not Authorized",
+    "signOut": "Sign Out",
+    "authOptions": "Authentication Options",
+    "ldapAuth": "Enter username and password for LDAP authentication",
+    "webManagementAuth": "Leave username empty and use web management password"
   },
   "device": {
     "devices": "Devices",
